--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -3,33 +3,55 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>html training</title>
+    <title>M-resume</title>
 </head>
 
 <body>
-    <center>
-    <h1>THE PRINCE</h1>
-    <h3>BY</h3>
-    <h2>NICCOLÒ MACHIAVELLI</h2>
-    <h3>TRANSLATED INTO ENGLISH BY</h3>
-    <h3>LUIGI RICCI
-        HUMPHREY MILFORD</h3>
-    <h4>OXFORD UNIVERSITY PRESS</h4>
-    <H4>LONDON EDINBURGH GLASGOW</H4>
-    <H4>NEW YORK TORONTO MELBOURNE CAPETOWN</H4>
-    <H4>BOMBAY CALCUTTA AND MADRAS</h4>
-    <H5>1909</h5>
-    <hr class= "full">
-    <!--  hr is to draw a line. it needs no slash to close -->
+    <table cellspacing "20">
+        <tr>
+            <td> <img src="vs code img.jpg" alt="Profile pics" height="250"></td>
+            <td>
+                <h1> Dadeola Hephzibah</h1>
+                <h4>Founder MidasTouch Inc.</h4>
+                <p>i am an <em>upcoming web developer, IT fanatic</em> and ready to work on developing projects <a
+                        href="https://www.linkedin.com/in/kulushi/"> <em> profile link</em></a> </p>
+            </td>
+        </tr>
+    </table>
+    <hr>
 
-    <!-- ctrl shift p to select functionality such as beaitify and all sorts  -->
+    <h3>educational background</h3>
 
-    </center>
+    <table cellspacing="20">
+        <thead>
+            <tr>
+                <th>DATE</th>
+                <th>SCHOOL</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2006-2011</td>
+                <td>BSC Economics</td>
+            </tr>
+            <tr>
+                <td>2014-2016</td>
+                <td>MA Finance and Economics Analysis</td>
+            </tr>
+            </tr>
+        </tbody>
+    </table>
+    <hr>
+    <ul>
+        <h3>Hobbies</h3>
+        <li> <a href="https://www.w3schools.com/">coding</a> </li>
+        <li> <a href="https://www6.putlockerr.is/genre/action/1">Movies</a> </li>
+        
 
-
-
+    </ul>
+ <a href="contactme.html">contact me</a>   
 </body>
 
 </html>
